ing/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels: 
    app.kubernetes.io/component: controller
  name: nginx-class
  namespace: prod
spec:
   controller: k8s.io/ingress-nginx
