ing/ingressru2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: kubia
  namespace: prod
spec:
  ingressClassName: nginx-c2
  rules:
  - host: haricloudsolutions.live
    http: 
      paths: 
      - path: /
      pathType: Prefix
      backend:
        service: 
          name: kubia-loadbalancer
          port:
            number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
  namespace: prod
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
