ing/ingressrules.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: kubia
  namespace: prod
spec:
  ingressClassName: nginx-class
  rules:
  - host: haricloudsolutions.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubia-nodeport
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
  namespace: prod
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: kubia
